security: actualizar dependencias para corregir vulnerabilidades criticas CVEs corregidos: - PyMySQL 1.1.0 -> 1.1.1 (inyeccion SQL) - starlette 0.35.1 -> 0.45.3 (DoS) - python-multipart 0.0.6 -> 0.0.20 (DoS multipart) - python-jose -> pyjwt 2.10.1 (confusion algoritmos ECDSA) - cryptography 42.0.0 -> 44.0.0 (NULL pointer) - FastAPI, SQLAlchemy, Pydantic y otras deps actualizadas

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -4,9 +4,9 @@ FROM python:3.10-slim
 # Set the working directory in the container
 WORKDIR /app
 
-# Install system dependencies needed for mysqlclient/cryptography if any
-# python3-dev default-libmysqlclient-dev build-essential are often needed for mysql driver compilation
-RUN apt-get update && apt-get install -y \
+# Install system dependencies needed for mysqlclient/cryptography
+# hadolint ignore=DL3008
+RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     default-libmysqlclient-dev \
     pkg-config \
