--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -5,36 +5,37 @@
 # ============================================
 
 # Core Framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
+starlette==0.45.3
 
 # Database
-sqlalchemy==2.0.25
-alembic==1.13.1
-pymysql==1.1.0
-cryptography==42.0.0
+sqlalchemy==2.0.36
+alembic==1.14.0
+pymysql==1.1.1
+cryptography==44.0.0
 
 # Validation & Settings
-pydantic==2.5.3
-pydantic-settings==2.1.0
-email-validator==2.1.0
+pydantic==2.10.4
+pydantic-settings==2.7.1
+email-validator==2.2.0
 
 # Security
-python-jose[cryptography]==3.3.0
+pyjwt[crypto]==2.10.1
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
+python-multipart==0.0.20
 slowapi==0.1.9  # Rate limiting
 
 # HTTP Client (for external APIs)
-httpx==0.26.0
+httpx==0.28.1
 
 # Testing
-pytest==7.4.4
-pytest-asyncio==0.23.3
-pytest-cov==4.1.0
+pytest==8.3.4
+pytest-asyncio==0.25.2
+pytest-cov==6.0.0
 
 # Development
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 
 # Optional: PostgreSQL (for production)
 # psycopg2-binary==2.9.9
